# manual_joint_offsets

./: CMakeLists.txt  README.md  package.xml
launch/: manual_joint_offsets.launch  shadow_hand.launch  snapshot_tuning_curves.launch
notebooks/: analysis.ipynb
scripts/: joint_offset_interpreter.py  plot_tuning_curve_data.py  prepare_robot_description.sh  shadow_hand_raw_sensor_joint_readings.py  snapshot_tuning_curves.py
