<?xml version="1.0"?>
<package format="3">
  <name>manual_joint_offsets</name>
  <version>0.0.0</version>
  <description>The manual_joint_offsets package</description>

  <maintainer email="me@v4hn.de">v4hn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_msgs</depend>
</package>
